src/main/resources/fabric8/deployment.yml
spec:
  template:
    spec:
      containers:
        - env:
          ports:
            - containerPort: 5555
              name: zeromq
              protocol: TCP
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: spring-boot-zeromq
      provider: snowdrop
      version: "1.5.17-4-redhat"
      group: io.openshift.booster
    name: spring-boot-zeromq
  spec:
    port:
      targetPort: 5555
    to:
      kind: Service
      name: spring-boot-rest-http
