src/main/resources/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: zeromq
spec:
  port:
    targetPort: 5555
  to:
    kind: Service
    name: zeromq
